--- a/Weitianshi/pages/my/myNew/myNew.wxml
+++ b/Weitianshi/pages/my/myNew/myNew.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<view class="entryBox flex" wx:if="{{!user}}" bindtap='entry'>
+<view class="entryBox flex" wx:if="{{!user}}" bindtap='entry'  hover-class='t-hoverColor'>
   <view class="user_left">
     <image class="user_pic" src="/img/img-touxiang@2x.png"></image>
   </view>
@@ -37,27 +37,31 @@
   <view class="user_down flex">
     <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity" hover-class="t-hoverColor">
       <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
-      <label class="popularityNum" wx:if="{{count.user_view_new}}">+{{count.user_view_new}}</label>
-      <label wx:if="{{count.user_view_new==0}}"></label>
-      <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+      <view class='flex flexCenter'>
+        <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+         <label class="popularityNum" wx:if="{{count.user_view_new !=0}}">+{{count.user_view_new}}</label> 
+      </view>
       <view class="popularity-people">浏览过</view>
     </view>
     <!--新的好友-->
     <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class="t-hoverColor">
       <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
-      <label class="attentionNum" wx:if="{{count.user_followed_new}}">+{{count.user_followed_new}}</label>
-      <label wx:if="{{count.user_followed_new==0}}"></label>
-      <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+      <view class='flex flexCenter'>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}</view>
+        <view class="attentionNum" wx:if="{{count.user_followed_new}}">+{{count.user_followed_new}}
+</view>
       </view>
-      <view class="attention-people">Ta的好友</view>
+      <view class="attention-people">我的好友</view>
     </view>
     <!-- 收到项目 -->
     <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class="t-hoverColor">
       <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
-      <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
-      <label class="potentialNum" wx:if="{{count.project_push_new}}">+{{count.project_push_new}}</label>
-      <label wx:if="{{count.project_push_new==0}}"></label>
-      <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+      <view class='flex flexCenter'>
+        <label wx:if="{{count.project_push_new==0}}"></label>
+        <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
+        <label class="potentialNum" wx:if="{{count.project_push_new}}">+{{count.project_push_new}}</label>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+      </view>
       <view class="potential-content">收到项目</view>
     </view>
   </view>
@@ -106,7 +110,7 @@
       <view class="blockContent" wx:if="{{status == 0 || !user}}" data-status="{{0}}">立即认证</view>
       <view class="identifyContent" wx:if="{{status == 3}}">审核未通过</view>
       <view class="identifyContent on" wx:if="{{status == 1}}">审核中</view>
-      <view class="blockContent" wx:if="{{status == 2}}">{{user.authentication[0].group_title}}</view>
+      <view class=" blockContent blockContentAfter" wx:if="{{status == 2}}">{{user.authentication[0].group_title}}</view>
       <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
     </view>
   </view>
