--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -44,13 +44,15 @@ page {
   flex-wrap: wrap;
   padding-bottom: 20rpx;
 }
-.user_left .user_identifyContent{
+
+.user_left .user_identifyContent {
   position: absolute;
   left: 14rpx;
   top: 128rpx;
   width: 124rpx;
   height: 34rpx;
 }
+
 .Identification {
   margin: 4rpx;
   border: 2rpx solid #40587a;
@@ -113,10 +115,14 @@ page {
   margin-bottom: 8rpx;
 }
 
-.user_career, .user_company {
+.user_career {
   font-size: 28rpx;
   color: #666;
   text-align: left;
+  width: 468rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .user_popularity, .user_attention, .user_potential {
@@ -125,24 +131,23 @@ page {
   font-size: 28rpx;
   color: #666;
   background: #fff;
-  border-radius: 8rpx;
+  /* border-radius: 8rpx; */
   width: 33.33%;
   position: relative;
   padding: 40rpx 0;
 }
 
 .user_attention view:first-child, .user_potential view:first-child {
-  /* font-size: 28rpx; */
   color: #666;
-  height: 40rpx;
+  height: 50rpx;
   flex: column;
-  /*justify-content: center;*/
 }
 
 .popularity-people, .attention-people, .potential-content {
   font-size: 24rpx;
   color: #999;
   text-align: center;
+  margin-top: 4rpx;
 }
 
 .popularity-Num, .attention-Num, .potential-Num {
@@ -150,6 +155,8 @@ page {
   color: #333;
   text-align: center;
   margin-bottom: 4rpx;
+  line-height: 50rpx;
+  height: 50rpx;
 }
 
 .line {
@@ -218,6 +225,10 @@ page {
   margin-top: 29rpx;
 }
 
+.blockContentAfter {
+  color: #666;
+}
+
 .number {
   font-size: 28rpx;
   text-align: right;
@@ -244,23 +255,22 @@ page {
 
 .identifyContent {
   font-size: 24rpx;
-  color: #40587a;
-  width: 120rpx;
+  color: #ccc;
   line-height: 54rpx;
   text-align: center;
-  margin-bottom: 29rpx;
+  width: 136rpx;
+  height: 54rpx;
+  margin-top: 29rpx;
 }
 
 .popularityNum, .potentialNum, .attentionNum {
-  position: absolute;
-  right: 15%;
-  top: 25%;
   font-size: 20rpx;
   color: #f95355;
   text-align: center;
   background: #f5f5f5;
   border-radius: 4rpx;
   padding: 8rpx;
+  height: 20rpx;
 }
 
 /*税号  */
@@ -482,7 +492,7 @@ page {
 .entryBox {
   padding: 32rpx;
   height: 154rpx;
-  background: #f2f3f4;
+  background: #fff;
 }
 
 .entryPoint {
@@ -497,4 +507,7 @@ page {
   font-size: 28rpx;
   color: #999;
   text-align: left;
+}
+.flexCenter{
+   justify-content:center;
 }
