--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1,5 +1,5 @@
 <!--------------------------我的-------------------------------------------------------  -->
-<!--My我的名片--> 
+<!--My我的名片-->
 <template name="userInfo">
   <view class="myEdit" bindtap="cardEdit">
     <view class="editTop">
@@ -293,12 +293,12 @@
 
 <!--提示详情填写请到pc端-->
 <template name="pointPC">
-  <view class="flex pc-guidem"> 
+  <view class="flex pc-guidem">
     <view class="pointToPC" hover-class='t-createColor' bindtap="toPc">
       <image src="/img/icon-wangzhan@2x.png" class="pointPcIcon"></image>
       用电脑创建项目，体验更好更流畅
       <!-- <label class="pointPcToNet">></label> -->
-       <image src="/img/icon-jiantou3@2x.png" class="pointPcToNet arrowStyle"></image>
+      <image src="/img/icon-jiantou3@2x.png" class="pointPcToNet arrowStyle"></image>
     </view>
   </view>
 </template>
@@ -1300,7 +1300,7 @@
 <template name="newSearch2">
   <view id="newSearch2">
     <view class="flex screen">
-      <input class="search_search2" placeholder="{{text}}" bindinput="searchSth" focus="true"  confirm-type="search" bindconfirm="searchYes"/>
+      <input class="search_search2" placeholder="{{text}}" bindinput="searchSth" focus="true" confirm-type="search" bindconfirm="searchYes" />
       <icon type="search" size="14" class="search_icon1"></icon>
       <view class="search_word" bindtap="searchYes">搜索</view>
     </view>
@@ -1413,7 +1413,7 @@
         <view class="t-userPosition t-carCom">{{item.investor_career}}</view>
         <view class="t-userCompany1 t-carCom" wx:if="{{item.investor_company}}">·{{item.investor_company}}</view>
       </view>
-      <view class='t-pipei'>
+      <view class='t-pipei' id="t-pipei12">
         <view class='t-numPipei'>{{item.match_weight}}</view>
         <view class="t-pipeidu">匹配度</view>
       </view>
@@ -1421,10 +1421,10 @@
         <view class="t-roundGroupPush flex" wx:if="{{item.industry_tag.length != 0}}">
           <view class="t-roundGroupContent">
             <block wx:for="{{item.industry_tag}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
-              <label wx:if="{{index < item.industry_tag.length-1}}">
+              <label wx:if="{{index < item.industry_tag.length-1}}" class="{{industryItem.is_match == 1 ? 't-hightLight1':'t-noLight1'}}">
                 {{industryItem.industry_name}}、
               </label>
-              <label wx:if="{{index ==  item.industry_tag.length-1}}">
+              <label wx:if="{{index ==  item.industry_tag.length-1}}" class="{{industryItem.is_match == 1 ? 't-hightLight1':'t-noLight1'}}">
                 {{industryItem.industry_name}}
               </label>
             </block>
@@ -1433,8 +1433,8 @@
         <view class="t-roundGroupPush flex" wx:if="{{item.stage_tag.length != 0}}">
           <view class="t-roundGroupContent">
             <block wx:for="{{item.stage_tag}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
-              <label wx:if="{{index < item.stage_tag.length-1}}">{{stageItem.stage_name}}、</label>
-              <label wx:if="{{index ==item.stage_tag.length-1}}">{{stageItem.stage_name}}</label>
+              <label wx:if="{{index < item.stage_tag.length-1}}" class="{{stageItem.is_match == 1 ? 't-hightLight1':'t-noLight1'}}">{{stageItem.stage_name}}、</label>
+              <label wx:if="{{index ==item.stage_tag.length-1}}" class="{{stageItem.is_match == 1 ? 't-hightLight1':'t-noLight1'}}">{{stageItem.stage_name}}</label>
             </block>
           </view>
         </view>
@@ -1447,10 +1447,14 @@
 <template name='matchButton1'>
   <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
     <view class="t-yichu" catchtap="deletePerson" data-investor="{{item.investor_id}}">移除</view>
-    <view class="t-line"></view>
+    <view class="t-line12"></view>
     <view class='t-yiti flex' catchtap="pushProject" data-id="{{item.user_id}}" wx:if="{{item.push_status == 0}}" catchtap='pushProject' hover-class='t-hoverColor' hover-stop-propagation='true'>
       <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
       <span>提交项目</span>
+    </view>
+    <view class="flex" wx:if="{{item.push_status == 1}}">
+      <!-- <image src="/img/icon-yituisong@2x.png" class="pushProject pushProject1"></image> -->
+      <view class="btnContented">已推送</view>
     </view>
   </view>
   <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
