--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1076,13 +1076,13 @@ page {
   display: inline-block;
   width: 25%;
   font-size: 26rpx;
-  color: #999;
+  color: #333;
   line-height: 62rpx;
   text-align: center;
 }
 
 .on {
-  color: #40587a;
+  /* color: #40587a; */
   border-bottom: 4rpx solid #3378e0;
 }
 
@@ -1118,7 +1118,7 @@ page {
 }
 
 .title {
-  margin-bottom: 32rpx;
+  /* margin-bottom: 32rpx; */
   font-size: 15px;
   color: #333;
   /* line-height: 21px; */
@@ -1275,9 +1275,9 @@ page {
 }
 
 .grayName {
-  font-size: 24rpx;
+  font-size: 28rpx;
   color: #999;
-  line-height: 24rpx;
+  line-height: 28rpx;
   text-align: left;
   margin-right: 8rpx;
   margin-bottom: 32rpx;
@@ -1348,6 +1348,7 @@ page {
   text-align: left;
   font-size: 14px;
   color: #333;
+  margin-left: 30rpx;
 }
 
 .materialWeb {
@@ -1364,6 +1365,7 @@ page {
   border-radius: 4rpx;
   width: 100%;
   height: 176rpx;
+  margin-top: 40rpx;
 }
 
 .txtContent {
@@ -1545,6 +1547,7 @@ page {
 
 #projectBox .teamPro {
   margin-bottom: 40rpx;
+  margin-top: 40rpx;
 }
 
 /*空白页*/
@@ -1719,7 +1722,7 @@ page {
   background-color: #fff;
   border-radius: 4rpx;
   width: 100%;
-  padding: 30rpx 0rpx 30rpx 0;
+  padding: 40rpx 0rpx 30rpx 0;
   position: relative;
   /* margin-bottom: 16rpx; */
   height: 166rpx;
@@ -1752,7 +1755,7 @@ page {
   -webkit-box-orient: vertical;
   font-size: 12px;
   color: #666;
-  line-height: 44rpx;
+  line-height: 42rpx;
 }
 
 #productBox .projectTips {
@@ -2089,7 +2092,8 @@ page {
   font-size: 28rpx;
   color: #ccc;
   line-height: 28rpx;
-  text-align: left;
+  text-align: center;
+  margin-left:98rpx;
 }
 
 .hasNothing {
@@ -2158,7 +2162,8 @@ page {
 }
 
 .pro_sorts {
-  margin-bottom: 20rpx;
+  margin-bottom: 40rpx;
+  margin-top: 40rpx;
 }
 
 .detailBottom {
@@ -2221,7 +2226,10 @@ page {
 .resourceImg {
   width: 62rpx;
   height: 62rpx;
-  margin-top: 43rpx;
+  margin-top: 57rpx;
   font-size: 18px;
   color: #999;
+}
+.t-userName{
+  font-weight: bold;
 }
