--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
 <view id='threeTab' wx:if='{{show_detail}}'>
   <view class="swiper-tab">
-  <!--wx:if='{{show_company}}'  -->
+    <!--wx:if='{{show_company}}'  -->
     <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}} project-detail-tabm" data-current="0" bindtap="swichNav">详情</view>
     <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}} buyers-mapm" data-current="1" bindtap="swichNav">潜在投资方</view>
     <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}} due-diligencem" data-current="2" bindtap="swichNav">一键尽调</view>
@@ -173,7 +173,7 @@
             <!--项目资料-->
             <view class="material" style="position:relative;" wx:if="{{project.pro_BP.length != 0|| project.pro_name != ''||project.pro_company_name != ''||project.pro_status != ''||project.pro_company_scale !=''||project.pro_website != ''||project.contact.user_name !=''||project.contact.user_mobile !=''}}">
               <view class="materialBox flex">
-                <view class="title">项目介绍</view>
+                <view class="{{tagOfPro.length != 0?'title':'t-title1' }}">项目介绍</view>
               </view>
               <view class="contentAll">
                 <view class="titleRightBP send-bpm" bindtap='onKey'>
@@ -189,36 +189,37 @@
                   <!-- <view class="proposal grayName" wx:if="{{project.pro_BP.length != 0}}">商业计划书：
                     <label class="materialContent">{{project.pro_BP.file_title}}</label>
                   </view> -->
-                  <view class="grayName" wx:if="{{project.pro_name != ''}}" wx:if='{{show_company==true}}'>项目名称：
+                  <view class="grayName" wx:if="{{project.pro_name != ''}}" wx:if='{{show_company==true}}'>项目名称
                     <label class="materialContent">{{project.pro_name}}</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_name == ''&&show_company==true}}">项目名称：
+                  <!--&&show_company==true  -->
+                  <view class="grayName" wx:if="{{project.pro_name == ''}}">项目名称
                     <label class="materialContent">暂未透露</label>
                   </view>
                   <!--wx:if='{{show_company==true}}'  -->
-                  <view class="grayName" wx:if="{{project.pro_company_name != ''}}">公司名称：
+                  <view class="grayName" wx:if="{{project.pro_company_name != ''}}">公司名称
                     <label class="materialContent byPass">{{project.pro_company_name}}</label>
                   </view>
                   <!--&&show_company==true  -->
-                  <view class="grayName" wx:if="{{project.pro_company_name == ''}}">公司名称：
+                  <view class="grayName" wx:if="{{project.pro_company_name == ''}}">公司名称
                     <label class="materialContent">暂未透露</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_status != ''}}">运营状态：
+                  <view class="grayName" wx:if="{{project.pro_status != ''}}">运营状态
                     <label class="materialContent">{{project.pro_status.status_name}}</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_status == ''}}">运营状态：
+                  <view class="grayName" wx:if="{{project.pro_status == ''}}">运营状态
                     <label class="materialContent">暂未透露</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_company_scale !=''}}">公司规模：
+                  <view class="grayName" wx:if="{{project.pro_company_scale !=''}}">公司规模
                     <label class="materialContent">{{project.pro_company_scale.comp_scale_value}}</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_company_scale ==''}}">公司规模：
+                  <view class="grayName" wx:if="{{project.pro_company_scale ==''}}">公司规模
                     <label class="materialContent">暂未透露</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_website != ''}}">产品链接：
+                  <view class="grayName" wx:if="{{project.pro_website != ''}}">产品链接
                     <label class="materialWeb materialContent byPass">{{project.pro_website}}</label>
                   </view>
-                  <view class="grayName" wx:if="{{project.pro_website == ''}}">产品链接：
+                  <view class="grayName" wx:if="{{project.pro_website == ''}}">产品链接
                     <label class="materialWeb materialContent byPass">暂未透露</label>
                   </view>
                   <!-- <view class="grayName proposalFinal" wx:if="{{project.contact.user_name !=''||project.contact.user_mobile !=''}}">项目联系人：
@@ -316,7 +317,7 @@
             <view class="brightPoint detailTop" wx:if="{{teamOfPro.length !=0 ||project.core_users.length!=0}}">
               <view id="detailHead">
                 <view class="brightPointBox flex">
-                  <view class="title">核心团队</view>
+                  <view  class="{{teamOfPro.length != 0?'title':'t-title1' }}">核心团队</view>
                   <view class="productAll" bindtap='toTeam' wx:if="{{core_memberArray1.length>3}}">全部（
                     <label>{{core_memberArray1.length}}</label>）</view>
                 </view>
@@ -393,57 +394,59 @@
     </swiper-item>
     <!--买家图谱  -->
     <swiper-item wx:if='{{show_company}}'>
-      <view class="t-matchButton flex">
-        <!--t-matchButton1  代表选中  -->
-        <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(
-          <label>{{matchCount}}</label>)
-        </button>
-        <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(
-          <label>{{investment_total_num}}</label>)</button>
-      </view>
-      <!--买家图谱  -->
-      <scroll-view wx:if="{{matchBut}}" scroll-y="true" bindscrolltolower="loadMore">
-        <view class="buyerPage">
-          <!-- <view id="matching">匹配推荐：
+      <scroll-view style="height:100%" scroll-y="true">
+        <view class="t-matchButton flex">
+          <!--t-matchButton1  代表选中  -->
+          <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(
+            <label>{{matchCount}}</label>)
+          </button>
+          <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(
+            <label>{{investment_total_num}}</label>)</button>
+        </view>
+        <!--买家图谱  -->
+        <scroll-view wx:if="{{matchBut}}" scroll-y="true" bindscrolltolower="loadMore">
+          <view class="buyerPage">
+            <!-- <view id="matching">匹配推荐：
             <label>{{matchCount}}</label>个</view> -->
-          <block wx:for="{{investor2}}" wx:key="{{investor2}}">
-            <view class="resourceBox flex" wx:if="{{item.remove !=1}}">
-              <view class="resourceLeft">
-                <image class="resourceImg" wx:if="{{item.match_rank==1}}" src="/img/img-1@2x.png"></image>
-                <image class="resourceImg" wx:if="{{item.match_rank==2}}" src="/img/img-2@2x.png"></image>
-                <image class="resourceImg" wx:if="{{item.match_rank==3}}" src="/img/img-3@2x.png"></image>
-                <view class="resourceImg">{{item.match_rank}}</view>
+            <block wx:for="{{investor2}}" wx:key="{{investor2}}">
+              <view class="resourceBox flex" wx:if="{{item.remove !=1}}">
+                <view class="resourceLeft">
+                  <image class="resourceImg" wx:if="{{item.match_rank==1}}" src="/img/img-1@2x.png"></image>
+                  <image class="resourceImg" wx:if="{{item.match_rank==2}}" src="/img/img-2@2x.png"></image>
+                  <image class="resourceImg" wx:if="{{item.match_rank==3}}" src="/img/img-3@2x.png"></image>
+                  <view class="resourceImg" wx:if="{{item.match_rank!==1&&item.match_rank!==2&&item.match_rank!==3}}">{{item.match_rank}}</view>
+                </view>
+                <view class="resourceRight">
+                  <template is='matchButton' data='{{item,user_id,investor_id,push_status}}'></template>
+                  <view class="t-alineHeight" wx:if="{{type==2}}"></view>
+                  <template is='matchButton1' data='{{item}}' wx:if="{{type==2}}"></template>
+                </view>
               </view>
-              <view class="resourceRight">
-                <template is='matchButton' data='{{item,user_id,investor_id,push_status}}'></template>
-                <view class="t-alineHeight" wx:if="{{type==2}}"></view>
-                <template is='matchButton1' data='{{item}}' wx:if="{{type==2}}"></template>
-              </view>
-            </view>
-          </block>
-          <view style="height:32rpx;"></view>
-          <template is="theBottom" style="margin-bottom:92rpx" wx:if="{{jiandi==true&&investor2.length!=0}}"></template>
-          <view style="height:32rpx;"></view>
-          <!-- <template is="hasNothing" data="{{emptyNumber:investor2}}"></template> -->
-          <template is="isEmpty" data="{{emptyNumber:investor2}}"></template>
-        </view>
-      </scroll-view>
-      <!--机构版买家图谱  -->
-      <scroll-view wx:if="{{matchBut1}}" style='height:1000rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
-        <view class="{{investment_list.length==0?'media123':'media12'}}">
-          <view class="matchIntro">{{newPage.pro_intro}}</view>
-          <view id="investment1" wx:if="{{investment_list.length!=0}}">
-            <template is='investment1' data='{{investment_list}}'></template>
-            <template is="theBottom" wx:if="{{investment_list.length!=0}}"></template>
+            </block>
+            <view style="height:32rpx;"></view>
+            <template is="theBottom" style="margin-bottom:92rpx" wx:if="{{jiandi==true&&investor2.length!=0}}"></template>
+            <view style="height:32rpx;"></view>
+            <!-- <template is="hasNothing" data="{{emptyNumber:investor2}}"></template> -->
+            <template is="isEmpty" data="{{emptyNumber:investor2}}"></template>
           </view>
-          <!-- <view class="hasNothing" wx:if="{{investment_list.length ==0 }}">暂无数据</view> -->
-          <template is="isEmpty" data="{{emptyNumber:investment_list}}"></template>
-        </view>
+        </scroll-view>
+        <!--机构版买家图谱  -->
+        <scroll-view wx:if="{{matchBut1}}" style='height:1000rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
+          <view class="{{investment_list.length==0?'media123':'media12'}}">
+            <view class="matchIntro">{{newPage.pro_intro}}</view>
+            <view id="investment1" wx:if="{{investment_list.length!=0}}">
+              <template is='investment1' data='{{investment_list}}'></template>
+              <template is="theBottom" wx:if="{{investment_list.length!=0}}"></template>
+            </view>
+            <!-- <view class="hasNothing" wx:if="{{investment_list.length ==0 }}">暂无数据</view> -->
+            <template is="isEmpty" data="{{emptyNumber:investment_list}}"></template>
+          </view>
 
 
-        <!--错误提示-->
-        <!-- <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view> -->
+          <!--错误提示-->
+          <!-- <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view> -->
 
+        </scroll-view>
       </scroll-view>
     </swiper-item>
     <!--一键尽调页面的内容-->
