--- a/Weitianshi/pages/message/browseMe/browseMe.wxml
+++ b/Weitianshi/pages/message/browseMe/browseMe.wxml
@@ -88,7 +88,7 @@
               <view class="t-line"></view>
               <view class='t-cardBottomItem2 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
                 <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-                <span>推送项目</span>
+                <span>提交项目</span>
               </view>
             </view>
             <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
