--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -1404,8 +1404,8 @@ button::after {
 }
 
 .aline {
-  margin: 0 32rpx;
-  width: 90%;
+  /* margin: 0 32rpx; */
+  width: 100%;
   height: 2rpx;
   background: #e6e6e6;
 }
