--- a/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxml
+++ b/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxml
@@ -1,2 +1,20 @@
-<!--pages/activity_detailPreview/activity_detailPreview.wxml-->
-<text>pages/activity_detailPreview/activity_detailPreview.wxml</text>
+<view id='signCheckIndentity'>
+  <view class='checkCard shadow'>
+    <view class='title'>填写手机号</view>
+    <view class='inputTel'>
+      <input placeholder='请输入活动报名填写的手机号'></input>
+    </view>
+    <view class='footer'>
+      <button>确定</button>
+    </view>
+  </view>
+  <view class='activityCard shadow'>
+    <view class='title'>活动基本信息</view>
+    <block wx:for = '{{demo}}' wx:key ='index'>
+      <view class='cardItem flex'>
+        <view class='name'>{{item.name}}</view>
+        <view class='value'>{{item.value}}</view>
+      </view>
+    </block>
+  </view>
+</view>
