--- a/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxss
+++ b/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxss
@@ -1,1 +1,64 @@
-/* pages/activity_detailPreview/activity_detailPreview.wxss */
+#signCheckIndentity {
+  padding: 38rpx 32rpx;
+}
+.shadow{
+ box-shadow: 0 0 10rpx #999;
+}
+.title {
+  padding: 24rpx 32rpx;
+  font-weight: 800;
+  font-size: 30rpx;
+  background: #f5f5f5;
+}
+
+.checkCard {
+  background: #f5f5f5;
+  border-radius: 8rpx 8rpx 0 0;
+}
+
+.checkCard .inputTel {
+  padding: 64rpx 56rpx;
+  background: white;
+}
+
+.checkCard .inputTel input {
+  padding-bottom: 18rpx;
+  border-bottom: 1px solid #f0f0f0;
+  background: white;
+  font-size: 26rpx;
+}
+
+.checkCard .footer {
+  padding: 30rpx 222rpx;
+}
+
+.checkCard .footer button {
+  background: #3378e0;
+  box-shadow: 0 2px 4px 0 rgba(51, 120, 224, 0.32);
+  border-radius: 2px;
+  color: white;
+  text-align: center;
+  font-size: 28rpx;
+}
+
+.activityCard{
+  margin-top: 36rpx;
+  font-size: 28rpx;
+  padding: 32rpx 32rpx;
+}
+.activityCard .cardItem{
+  margin-bottom: 64rpx;
+}
+.activityCard .cardItem:last-child{
+  margin-bottom: 0;
+}
+.activityCard .name{
+  flex: 42;
+  margin-right: 32rpx;
+  color:#999;
+  text-align:justify; 
+  text-align-last: justify;
+}
+.activityCard .value{
+  flex: 253;
+}
