--- a/Weitianshi/pages/message/browseMe/browseMe.wxml
+++ b/Weitianshi/pages/message/browseMe/browseMe.wxml
@@ -27,10 +27,10 @@
                   <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
                     <!-- <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
           <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
-                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
                   </view>
-                  <view class="t-record">{{item.active_status}}</view>
+                  <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
                   <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
 
                 </view>
@@ -42,9 +42,9 @@
 
                 </view>
                 <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
-                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
+                <view class="t-roundGroupPush flex">
                   <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
-                  <view class="t-roundGroupContent">
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length != 0}}">
                     <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
                       <label wx:if="{{index < item.user_invest_industry.length-1}}">
                         {{industryItem.industry_name}}、
@@ -54,16 +54,18 @@
                       </label>
                     </block>
                   </view>
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length == 0}}"> 暂未透露</view>
                 </view>
-                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
+                <view class="t-roundGroupPush flex">
                   <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
-                  <view class="t-roundGroupContent">
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length != 0}}">
                     <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
                       <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
                       <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
                     </block>
                   </view>
                 </view>
+                <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length == 0}}"> 暂未透露</view>
               </view>
             </view>
 
