--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -26,7 +26,7 @@
                   <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
                   <view class="t-userName">{{item.user_real_name}}</view>
                   <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
-                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
                   </view>
                   <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
@@ -40,9 +40,9 @@
                 <view class='t-people flex' wx:if='{{item.user_id!=user_id}}'>
                 </view>
                 <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
-                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
+                <view class="t-roundGroupPush flex" >
                   <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
-                  <view class="t-roundGroupContent">
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length != 0}}">
                     <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
                       <label wx:if="{{index < item.user_invest_industry.length-1}}">
                         {{industryItem.industry_name}}、
@@ -52,15 +52,17 @@
                       </label>
                     </block>
                   </view>
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length == 0}}">暂未透露</view>
                 </view>
-                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
+                <view class="t-roundGroupPush flex" >
                   <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
-                  <view class="t-roundGroupContent">
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length != 0}}">
                     <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
                       <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
                       <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
                     </block>
                   </view>
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length == 0}}">暂未透露</view>
                 </view>
               </view>
             </view>
