--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1073,10 +1073,18 @@ page {
   line-height: 62rpx;
   text-align: center;
 }
-
-.on {
+.on::after {
+  content: '';
   /* color: #40587a; */
-  border-bottom: 4rpx solid #3378e0;
+  width: 40rpx;
+  height: 4rpx;
+  border-radius: 4rpx;
+  text-align: center;
+  z-index: 666;
+  display: block!important;
+  background: #3378e0;
+  margin-left: 38%;
+  /* border-bottom: 4rpx solid #3378e0; */
 }
 
 /*啦啦啦啦啦啦啦*/
@@ -1310,7 +1318,7 @@ page {
 #projectBox .myPic {
   width: 100%;
   height: 214rpx;
-  background: #1a2e4a;
+  /* background: #1a2e4a; */
 }
 
 #projectBox .scale {
@@ -2086,7 +2094,7 @@ page {
   color: #ccc;
   line-height: 28rpx;
   text-align: center;
-  margin-left:98rpx;
+  margin-left: 98rpx;
 }
 
 .hasNothing {
@@ -2110,7 +2118,6 @@ page {
   height: 2rpx;
   background: #e6e6e6;
 }
-
 
 .bottomBox {
   height: 88rpx;
@@ -2166,9 +2173,7 @@ page {
 }
 
 .service {
-   /* z-index: 111111; */
-  /* border: 0 solid #e6e6e6; */
-  /* box-shadow: 0 0 4px 0 rgba(41, 59, 85, 0.10); */
+  /* z-index: 111111; *//* border: 0 solid #e6e6e6; *//* box-shadow: 0 0 4px 0 rgba(41, 59, 85, 0.10); */
   width: 112rpx;
   height: 112rpx;
   border-radius: 100%;
@@ -2223,6 +2228,7 @@ page {
   font-size: 18px;
   color: #999;
 }
-.t-userName{
+
+.t-userName {
   font-weight: bold;
 }
